--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   "dependencies": {
     "telegraf": "^4.16.3",
     "@supabase/supabase-js": "^2.39.3",
-    "@google/genai": "^0.1.0",
+    "@google/generative-ai": "^0.21.0",
     "rss-parser": "^3.13.0",
     "dotenv": "^16.4.1"
   }
 }
+
 
